# crouch-analyzer-pro

./: .gitignore  DEPLOYMENT_GUIDE.md  README.md  app.py  build_packages.sh  pyproject.toml  render.yaml  requirements.txt  start_command.sh
crouch-analyzer-pro/: README.md  app.py
crouch-analyzer-pro/static/: style.css
crouch-analyzer-pro/templates/: index.html
static/: script.js  style.css
static/uploads/: .gitkeep
templates/: index.html  simple_upload.html  test_upload.html
templates/simple_upoad/: html
