[tool.poetry]
name = "crouch-analyzer-pro"
version = "0.1.0"
description = "A professional tool for analyzing crouch positions"
authors = ["kotor-1 <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.13"
Flask = "3.0.0"
gunicorn = "21.2.0"
Pillow = "10.0.0"  # 古いバージョンを指定

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
